[gd_scene load_steps=4 format=3 uid="uid://wxmkinlg5vl6"]

[ext_resource type="Script" path="res://scripts/menu_script/pause_menu - setting.gd" id="1_ol70h"]
[ext_resource type="PackedScene" uid="uid://culcvcntqyrm7" path="res://scen/Menu/pause_menu.tscn" id="2_ero2p"]
[ext_resource type="PackedScene" uid="uid://sidsc1updrrd" path="res://scen/Menu/settings.tscn" id="3_v007q"]

[node name="pause_menu - setting" type="ColorRect"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.501961)
script = ExtResource("1_ol70h")

[node name="pause_menu" parent="." instance=ExtResource("2_ero2p")]
layout_mode = 1

[node name="Settings" parent="." instance=ExtResource("3_v007q")]
layout_mode = 1

[connection signal="continion_presed" from="pause_menu" to="." method="_on_pause_menu_continion_presed"]
[connection signal="settings_presed" from="pause_menu" to="." method="_on_pause_menu_settings_presed"]
[connection signal="signal_presed" from="Settings" to="." method="_on_settings_signal_presed"]
